# mediasoup-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  builddeps.sh
controller/: CMakeLists.txt  abstract_transport_controller.cpp  abstract_transport_controller.h  active_speaker_observer_controller.cpp  active_speaker_observer_controller.h  audio_level_observer_controller.cpp  audio_level_observer_controller.h  channel.cpp  channel.h  channel_socket.cpp  channel_socket.h  common_types.h  config.cpp  config.h  config.json  consumer_controller.cpp  consumer_controller.cpp.autosave  consumer_controller.h  data_consumer_controller.cpp  data_consumer_controller.h  data_producer_controller.cpp  data_producer_controller.h  direct_transport_controller.cpp  direct_transport_controller.h  engine.cpp  engine.h  h264_profile_level_id.cc  h264_profile_level_id.h  message_builder.cpp  message_builder.h  ortc-client.h  ortc.cpp  ortc.h  parameters.cpp  parameters.h  payload_channel.cpp  payload_channel.h  pipe_transport_controller.cpp  pipe_transport_controller.h  plain_transport_controller.cpp  (+34 more)
controller/interface/: i_consumer_controller.h  i_data_consumer_controller.h  i_data_producer_controller.h  i_producer_controller.h  i_router_controller.h  i_rtp_observer_controller.h  i_transport_controller.h  i_webrtc_server_controller.h  i_webrtc_transport_controller.h  i_worker_controller.h
install/: install.sh  unstall.sh
install/conf/: config.json
install/etc/init.d/: sfu
install/usr/lib/systemd/system/: srs.service
script/: buildabsl.sh  buildconcurrencpp.sh  buildconcurrentqueue.sh  buildflatbuffers.sh  buildliburing.sh  buildsigslot.sh
server/: CMakeLists.txt  active_speaker_observer_controller.cpp  active_speaker_observer_controller.h  audio_level_observer_controller.cpp  audio_level_observer_controller.h  channel.cpp  channel.h  config.json  consumer_controller.cpp  consumer_controller.h  data_consumer_controller.cpp  data_consumer_controller.h  data_producer_controller.cpp  data_producer_controller.h  direct_transport_controller.cpp  direct_transport_controller.h  engine.cpp  engine.h  h264_profile_level_id.h  ortc-client.cpp  payload_channel.cpp  payload_channel.h  pipe_transport_controller.cpp  pipe_transport_controller.h  plain_transport_controller.cpp  plain_transport_controller.h  producer_controller.cpp  producer_controller.h  router_controller.cpp  router_controller.h  rtp_observer_controller.cpp  rtp_observer_controller.h  scalability_mode.cpp  sctp_parameters.cpp  singleton.h  srtp_parameters.cpp  srtp_parameters.h  srv_logger.h  supported_rtp_capabilities.cpp  transport_controller.cpp  (+10 more)
server-app/: CMakeLists.txt
server-app/src/: App.cpp  AppComponent.hpp  app.cpp  app_component.hpp
server-app/src/controller/: FileController.hpp  RoomsController.hpp  StaticController.hpp  StatisticsController.hpp  rooms_controller.hpp  statistics_controller.hpp
server-app/src/dto/: Config.hpp  DTOs.hpp  config.hpp  dtos.hpp
server-app/src/rooms/: File.cpp  File.hpp  Lobby.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp  peer.cpp  room.cpp
server-app/src/utils/: Message.cpp  Message.hpp  Statistics.cpp  Statistics.hpp
server/interface/: i_worker_controller.h
sfu/: CMakeLists.txt
sfu/cert/: cert.pem  key.pem
sfu/src/: app.cpp  app_component.hpp
sfu/src/controller/: rooms_controller.hpp  statistics_controller.hpp
sfu/src/dto/: config.hpp  dtos.hpp
sfu/src/rooms/: lobby.cpp  lobby.hpp  peer.cpp  peer.hpp  producer_video_quality_controller.cpp  producer_video_quality_controller.hpp  room.cpp  room.hpp  video_producer_quality_controller.cpp  video_producer_quality_controller.hpp  video_sharing_controller.cpp  video_sharing_controller.hpp
sfu/src/utils/: message.cpp  message.hpp  statistics.cpp  statistics.hpp
worker/: CMakeLists.txt
worker/include/: Logger.hpp
worker/include/RTC/: SrtpSession.hpp
worker/pip_invoke/invoke-2.2.0.dist-info/: RECORD
worker/src/: Settings.cpp  lib.cpp
